samples/_failures_safe/1761709328_cc68e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60a43d2e.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_60a43d2e.c:168:9: error: expected expression at end of input
  168 |         "NUMBER",
      |         ^~~~~~~~
./samples/SAFE/__tmp_60a43d2e.c:168:9: error: expected declaration or statement at end of input
